# pitch-predictions

./: .gitignore  README.md  docker-compose.yml  render.yaml
backend/: .env.example  Dockerfile  build.py  pyproject.toml  requirements.txt  scheduler-entrypoint.sh  vercel.json
backend/accounts/: activity.py  authentication.py  forms.py  models.py  serializers.py  tests.py  token_serializers.py  urls.py  views.py
backend/accounts/migrations/: 0002_user_last_seen_at.py
backend/cron/: crontab
backend/groups/: models.py  serializers.py  urls.py  views.py
backend/groups/migrations/: 0002_group_icon.py  0003_alter_group_icon.py  0004_alter_group_icon.py  0005_alter_group_icon.py
backend/notifications/: admin.py  models.py  serializers.py  tests.py  tests_notification_urls.py  urls.py  views.py
backend/notifications/migrations/: 0001_initial.py
backend/notifications/services/: match_reminders.py  notification_urls.py  push.py
backend/predictions/: dashboard_urls.py  models.py  serializers.py  tests.py  views.py
backend/predictions/migrations/: 0003_scaling_leaderboards_and_jobs.py  0004_create_app_cache_table.py
backend/predictions/services/: background_jobs.py  cache_keys.py  dashboard.py  leaderboard.py  notifications.py  scoring.py  validators.py
backend/tournaments/: admin.py  ar_translations.py  models.py  serializers.py  test_tournament_data.py  tests.py  tests_subscriptions.py  urls.py  views.py  wc2026_data.py
backend/tournaments/services/: live_score_status.py  (+10 more)
backend/worldcup/: health.py  pagination.py  settings.py  test_settings.py  urls.py
(+134 files in other folders)
