[project]
name = "alhabeed-backend"
version = "1.0.0"
requires-python = ">=3.12"
dependencies = [
    "Django>=5.0,<6.0",
    "djangorestframework>=3.15,<4.0",
    "djangorestframework-simplejwt>=5.3,<6.0",
    "django-cors-headers>=4.3,<5.0",
    "psycopg2-binary>=2.9,<3.0",
    "dj-database-url>=2.1,<3.0",
    "drf-spectacular>=0.27,<1.0",
    "whitenoise>=6.6,<7.0",
    "python-decouple>=3.8,<4.0",
    "django-ratelimit>=4.1,<5.0",
    "requests>=2.31,<3.0",
    "beautifulsoup4>=4.12,<5.0",
    "pywebpush>=2.0,<3.0",
]

[tool.vercel.scripts]
build = "python build.py"
